--- a/client/package.json
+++ b/client/package.json
@@ -4,17 +4,16 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "npx tailwindcss@latest build -o ./src/tailwind.css && vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
-    "bootstrap": "^5.3.3",
+    "@vitejs/plugin-react": "^4.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2",
-    "@vitejs/plugin-react": "^4.2.1",
     "vite": "^5.1.4"
   },
   "devDependencies": {
@@ -23,7 +22,7 @@
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5"
-    
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "tailwindcss": "^3.4.3"
   }
 }
